--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,1 +1,4 @@
-logging.level.org.zalando.logbook: TRACE
+logging:
+  level:
+    org.zalando.logbook: TRACE
+    ru.yandex.practicum.filmorate: DEBUG
