--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,8 @@ target/
 .springBeans
 .sts4-cache
 
-### IntelliJ IDEA ###
+### IDE ###
+.gigaide
 .idea
 *.iws
 *.iml
@@ -38,9 +39,6 @@ target/
 build/
 !**/src/main/**/build/
 !**/src/test/**/build/
-
-### VS Code ###
-.vscode/
 
 *.db
 db/*
